# AI_Stratup_validator

./: .gitignore  README.md  firestore.rules  render.yaml  setup-gcp.ps1  skills-lock.json
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/.data/reports/: 170acf34-1718-49bd-b89c-3fa78a4b5452.json  38c0338e-b72e-4846-88a2-325c7d7349b1.json  8eec6eb7-d281-4ec7-81cb-f75cdc76425a.json  91723507-a716-4ab9-9d54-5ee24cc5a53e.json  e207686e-a268-4a37-89be-62ae274bdb28.json  fa2c8bf1-c846-47c7-b78f-7d3103553c94.json  smoke-report-001.json
backend/src/: __init__.py
backend/src/agents/: asset_generator.py  competitor_intel.py  critic_agent.py  financial_model.py  market_research.py  orchestrator.py  pivot_agent.py  sdg_agent.py
backend/src/tools/: auth_guard.py  calculator_tool.py  metrics_store.py  pii_masker.py  report_store.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/admin/: page.module.css  page.tsx
frontend/app/report/[id]/: page.tsx  report.module.css
frontend/app/validate/: page.tsx  validate.module.css
frontend/lib/: firebase.ts
frontend/utils/: pdfGenerator.ts
tests/: e2e_test.py
